--- a/source/src/main/resources/application.properties
+++ b/source/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.url=jdbc:mysql://192.168.56.102:3306/template
 spring.datasource.username=ap_template
 spring.datasource.password=template2021
 
-# spring.jackson.parser.allow-numeric-leading-zeros=true
+# Se ignora el 0 a la izquierda de los números
+spring.jackson.parser.allow-numeric-leading-zeros=true
+
 # --  HSQLDB
 #spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 #spring.datasource.url=jdbc:hsqldb:mem:testdb
