--- a/source/src/main/resources/application.properties
+++ b/source/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.56.102:3306/template
+spring.datasource.url=jdbc:mysql://192.168.56.102:3306/snic_sat
 
 
-spring.datasource.username=ap_template
-spring.datasource.password=template2021
+spring.datasource.username=api_snic
+spring.datasource.password=muyMolesto
 
 # Se ignora el 0 a la izquierda de los números
 spring.jackson.parser.allow-numeric-leading-zeros=true
+
 
 # --  HSQLDB
 #spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
